# mcf

./: .gitignore  CMakeLists.txt  README.md  TODO  mc.c  mc.cpp
alg/: enum-dfs.c  enum-dfs.h  sym-bfs.c  sym-bfs.h
andl/: CMakeLists.txt  andl-parser.y
cmake/: FindFLEX.cmake  FindLEMON.cmake
dm/: CMakeLists.txt  bitvector.c  dm.c  dm.h
examples/: CMakeLists.txt  X509.pr.spins.c  anderson.6.dve.cpp  bakery.7.dve.cpp  blocks.4.dve.cpp  brp.6.dve.cpp  brp.pr.spins.c  cambridge.7.dve.cpp  collision.5.dve.cpp  collision.6.dve.cpp  dbm.pr.spins.c  driving_phils.4.dve.cpp  elevator.5.dve.cpp  elevator_planning.2.dve.cpp  exit.4.dve.cpp  firewire_link.3.dve.cpp  fischer.7.dve.cpp  frogs.5.dve.cpp  garp.spins.c  hanoi.4.dve.cpp  i0.pr.spins.c  i1.pr.spins.c  i2.pr.spins.c  i3.pr.spins.c  i4.pr.spins.c  iprotocol.7.dve.cpp  lamport_nonatomic.5.dve.cpp  lann.7.dve.cpp  leader_election.6.dve.cpp  leader_filters.6.dve.cpp  lifts.8.dve.cpp  loyd.3.dve.cpp  lup.4.dve.cpp  mcs.5.dve.cpp  msmie.4.dve.cpp  needham.4.dve.cpp  peg_solitaire.2.dve.cpp  peterson5.pr.spins.c  pgm_protocol.8.dve.cpp  philo.pr.spins.c  (+13 more)
examples/models/: compile-all.sh  models.xlsx
examples/peterson/: CMakeLists.txt  dlopen-impl.c  peterson.c  peterson.h
loader/: dlopen-pins.c  dlopen-pins.h  dve-pins.c  dve-pins.h  etf-pins.c  etf-pins.h  loader.c  loader.h  pnml-pins.c  pnml-pins.h  prom-pins.c  prom-pins.h
ltl2ba/: CMakeLists.txt  buchi.c  main.c
ltsmin-lib/: CMakeLists.txt  etf-objects.c  etf-parser.c  etf-util.h  ltl2ba-lex.c  lts-type.c  ltsmin-parse-env.h  ltsmin-tl.c  ltsmin-type-system.c  mucalc-lexer.l
pdf/lab1/: lab1.tex
pdf/lab2/: lab2.tex  lit.bib  local-macros.tex  preamble.tex
pdf/lab3/: lab3.tex  lit.bib  macros.tex  preamble.tex
pdf/lab4/: lab4.tex
pdf/lab5/: lab5.tex
peterson/: CMakeLists.txt  dlopen-impl.c  peterson.c  peterson.h
pins/: CMakeLists.txt  dlopen-api.h  lts-type.c  pins-util.c  pins-util.h  pins.h  property-semantics.c  property-semantics.h
pins2pins/: ltl.h  por.c
src/: CMakeLists.txt  mc.c
src/alg/: aux.c  aux.h  enum-bdd.c  enum-bdd.h  enum-dfs.c  sym-bfs.c  sym-bfs.h
src/aux/: options.c  options.h
src/bignum/: CMakeLists.txt  bignum-gmp.c  bignum-ll.c  bignum-tommath.c
src/dm/: dm.c
src/loader/: dlopen-pins.c  dve-dl.c  dve-dl.h  dve-pins.c  etf-pins.c  loader.c  pnml-pins.c  prom-dl.c  prom-dl.h  prom-pins.c
src/ltsmin-lib/: etf-util.c  ltl2ba-lex-helper.c  ltl2ba-lex.h  ltsmin-grammar.lemon  ltsmin-syntax.c  ltsmin-syntax.h  mucalc-syntax.c
src/pins/: CMakeLists.txt  dlopen-api.h  lts-type.c  lts-type.h  pins-util.c  pins.c  pins.h  property-semantics.c  property-semantics.h
src/pins2pins/: group.c  group.h  ltl.c  por.c  por.h  process.c  process.h  tr.c  tr.h
src/syntax/: CMakeLists.txt  etf-internal.h  etf-objects.c  etf-parser.c  etf-util.c  etf-util.h  ltl2ba-lex-helper.c  ltl2ba-lex-helper.h  ltl2ba-lex.c  ltl2ba-lex.h  ltl2spot.cpp  ltl2spot.h  lts-type.c  ltsmin-buchi.h  ltsmin-grammar.lemon  ltsmin-lexer.l  ltsmin-parse-env.h  ltsmin-standard.h  ltsmin-syntax.c  ltsmin-tl.c  ltsmin-tl.h  ltsmin-type-system.c  ltsmin-type-system.h  mucalc-grammar.lemon  mucalc-lexer.l  mucalc-parse-env.h  mucalc-syntax.c  mucalc-syntax.h
src/syntax/andl/: andl-lexer.l  andl-parser.y
src/util/: CMakeLists.txt  balloc.c  chunk_support.h  chunk_table_factory.c  chunk_table_factory.h  dfs-stack.c  dir_ops.c  dir_ops.h  is-balloc.c  list.c  simplemap.c  simplemap.h  string-map.c  treedbs.c  util.h
src/util-mc/: clt_table.c  hashtable.c  table-ll.c  tree-ll.c  tree-ll.h
src/util/io/: client-server.h  gcf_common.h  hre_archive_dir.c  hre_gcf_read.c  hre_stream.c  hre_stream_diff32.c  hre_stream_fd.c  hre_stream_mem.c  hre_stream_rle32.c  hre_struct_io.c  hre_zip_io.c  struct_io.h
src/vset/: CMakeLists.txt  vector_set.c  vector_set.h  vset_atermdd.c  vset_lddmc.c  vset_listdd.c  vset_listdd64.c  vset_sylvan.c
sylvan/: CMakeLists.txt
util/: CMakeLists.txt  balloc.c  chunk_support.c  dfs-stack.h  dynamic-array.c  fast_hash.c  fast_hash.h  is-balloc.c  list.h  runtime.c  runtime.h  stringindex.c  stringindex.h  tables.c  tables.h  treedbs.c  unix.h  util.h
util-mc/: CMakeLists.txt  clt_table.c  dbs-ll.c  dbs-ll.h  hashtable.c  lb.c  table-ll.c  tree-ll.h  treedbs-ll.c  treedbs-ll.h
util/io/: arch_object.h  archive.h  fifo.h  hre_archive.c  hre_client_server.c  hre_fifo.c  hre_gcf_common.c  hre_gcf_write.c  hre_gzstream.c  hre_raf.c  hre_stream_buffer.c  raf.h  raf_object.h  stream.h  stream_object.h  user.h
vset/: vdom_object.h  vector_set.c  vset_buddy.c  vset_ddd.cpp  vset_lddmc.c  vset_listdd.c  vset_listdd64.c  vset_sylvan.c
